fix: tooltip z-index

--- a/src/frontend/components/RichTextEditor/RichTextEditor.css
+++ b/src/frontend/components/RichTextEditor/RichTextEditor.css
@@ -123,6 +123,7 @@
   color: var(--color-background-accent-three);
   padding: 0.75rem 0.5rem;
   box-shadow: none;
+  z-index: 1;
 }
 
 .ql-snow .ql-tooltip[data-mode="link"]::before {
